controller and service update